--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -63,13 +63,17 @@ body {
   color: var(--akcent-text);
 }
 .nav-contact {
+  font-weight: 500;
   font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   color: var(--secondary-text);
 }
 .nav-contact:hover,
 .nav-contact:focus {
+  color: var(--akcent-text);
+}
+.nav-list .nav-link.current {
   color: var(--akcent-text);
 }
 /* Hero */
@@ -117,7 +121,8 @@ body {
   color: var(--secondary-text);
 }
 /* Чем мы занимаемся */
-.work-title {
+.work-title,
+.team-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -169,6 +174,7 @@ body {
 
 /* Страница Портфолио */
 .projects-btn {
+  font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -179,6 +185,7 @@ body {
 }
 .projects-btn:hover,
 .projects-btn:focus {
+  font-family: var(--main-font);
   color: #ffffff;
   background-color: var(--akcent-text);
 }
